@@ -1,7 +1,5 @@
 /* #undef PQXX_HAVE_PQDESCRIBEPORTAL */
 /* #undef PQXX_HAVE_PQENCRYPTPASSWORD */
-#define PQXX_HAVE_PQESCAPEBYTEA 1
-#define PQXX_HAVE_PQESCAPEBYTEACONN 1
 #define PQXX_HAVE_PQESCAPESTRING 1
 #define PQXX_HAVE_PQESCAPESTRINGCONN 1
 #define PQXX_HAVE_PQEXECPARAMS 1
